Created profile page and edit employee (minor)details in profile page.

--- a/crm-frontend/package.json
+++ b/crm-frontend/package.json
@@ -5,12 +5,15 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hello-pangea/dnd": "^18.0.1",
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
     "axios": "^1.11.0",
     "cra-template-pwa": "2.0.0",
+    "date-fns": "^4.1.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.19.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "^5.0.1",
