Added Report Generation Function to all modules and changed the dashboard.

--- a/crm-frontend/package.json
+++ b/crm-frontend/package.json
@@ -11,9 +11,12 @@
     "axios": "^1.11.0",
     "cra-template-pwa": "2.0.0",
     "date-fns": "^4.1.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.6.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-big-calendar": "^1.19.4",
+    "react-datepicker": "^8.7.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "^5.0.1",
